Working on linux. Need to test on mac and windows.